=== HEAD

* Support composite keys in model associations (jeremyevans)

* Add the force_encoding plugin for forcing encoding of strings for models (requires ruby 1.9) (jeremyevans)

* Support DataObjects 0.10 (previous DataObjects versions are now unsupported) (jeremyevans)

* Allow the user to specify the ADO connection string via the :conn_string option (jeremyevans)

* Add thread_local_timezones extension for allow per-thread overrides of the global timezone settings (jeremyevans)

* Add named_timezones extension for using named timezones such as "America/Los_Angeles" using TZInfo (jeremyevans)

* Pass through unsigned/elements/size and other options when altering columns on MySQL (tmm1)

* Replace Dataset#virtual_row_block_call with Sequel.virtual_row (jeremyevans)

* Allow Dataset #delete, #update, and #insert to respect existing WITH clauses on MSSQL (dlee, jeremyevans)

* Add touch plugin, which adds Model#touch for updating an instance's timestamp, as well as touching associations when an instance is updated or destroyed (jeremyevans)

* Add sql_expr extension, which adds the sql_expr to all objects, giving them easy access to Sequel's DSL (jeremyevans)

* Add active_model plugin, which gives Sequel::Model an ActiveModel compliant API, passes the ActiveModel::Lint tests (jeremyevans)

* Fix MySQL commands out of sync error when using queries with multiple result sets without retrieving all result sets (jeremyevans)

* Allow splitting of multiple result sets into separate arrays when using multiple statements in a single query in the native MySQL adapter (jeremyevans)

* Don't include primary key indexes when parsing MSSQL indexes on JDBC (jeremyevans)

* Make Dataset#insert_select return nil on PostgreSQL if disable_insert_returning is used (jeremyevans)

* Speed up execution of prepared statements with bound variables on MySQL (ibc@aliax.net)
 